--- a/tox.ini
+++ b/tox.ini
@@ -53,5 +53,4 @@ ignore = E121,E122,E123,E124,E125,E126,E127,E128,E711,E712,H102,H404,F403,F811,F
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,tools
 
 [hacking]
-local-check-factory = nova.hacking.checks.factory
-import_exceptions = nova.openstack.common.gettextutils._
+import_exceptions = gantt.openstack.common.gettextutils._
