Remove nova specific stanza
This file was copied from the nova tree, remove some nova specific info.

Need to keep the gettextutils reference.

Update the setup.cfg file also.

Add the tools directory and update nova references there.

Update .gitreview to point to the right repo.

Update the test configuration so that (hopefully) Jenkins will run.

Change-Id: I0cb66e6620900fd318f45d758a94f95b144e006a
Signed-off-by: Don Dugger <donald.d.dugger@intel.com>

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,6 @@ downloadcache = ~/cache/pip
 sitepackages = False
 commands =
   flake8 {posargs}
-  {toxinidir}/tools/config/check_uptodate.sh
 
 [testenv:pylint]
 setenv = VIRTUAL_ENV={envdir}
@@ -53,5 +52,4 @@ ignore = E121,E122,E123,E124,E125,E126,E127,E128,E711,E712,H102,H404,F403,F811,F
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,tools
 
 [hacking]
-local-check-factory = nova.hacking.checks.factory
-import_exceptions = nova.openstack.common.gettextutils._
+import_exceptions = gantt.openstack.common.gettextutils._
