--- a/setup.cfg
+++ b/setup.cfg
@@ -27,128 +27,6 @@ packages =
     gantt
 
 [entry_points]
-nova.image.download.modules =
-    file = nova.image.download.file
-console_scripts =
-    nova-all = nova.cmd.all:main
-    nova-api = nova.cmd.api:main
-    nova-api-ec2 = nova.cmd.api_ec2:main
-    nova-api-metadata = nova.cmd.api_metadata:main
-    nova-api-os-compute = nova.cmd.api_os_compute:main
-    nova-baremetal-deploy-helper = nova.cmd.baremetal_deploy_helper:main
-    nova-baremetal-manage = nova.cmd.baremetal_manage:main
-    nova-rpc-zmq-receiver = nova.cmd.rpc_zmq_receiver:main
-    nova-cells = nova.cmd.cells:main
-    nova-cert = nova.cmd.cert:main
-    nova-clear-rabbit-queues = nova.cmd.clear_rabbit_queues:main
-    nova-compute = nova.cmd.compute:main
-    nova-conductor = nova.cmd.conductor:main
-    nova-console = nova.cmd.console:main
-    nova-consoleauth = nova.cmd.consoleauth:main
-    nova-dhcpbridge = nova.cmd.dhcpbridge:main
-    nova-manage = nova.cmd.manage:main
-    nova-network = nova.cmd.network:main
-    nova-novncproxy = nova.cmd.novncproxy:main
-    nova-objectstore = nova.cmd.objectstore:main
-    nova-rootwrap = nova.openstack.common.rootwrap.cmd:main
-    nova-scheduler = nova.cmd.scheduler:main
-    nova-spicehtml5proxy = nova.cmd.spicehtml5proxy:main
-    nova-xvpvncproxy = nova.cmd.xvpvncproxy:main
-
-nova.api.v3.extensions =
-    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
-    admin_actions = nova.api.openstack.compute.plugins.v3.admin_actions:AdminActions
-    admin_password = nova.api.openstack.compute.plugins.v3.admin_password:AdminPassword
-    agents = nova.api.openstack.compute.plugins.v3.agents:Agents
-    aggregates = nova.api.openstack.compute.plugins.v3.aggregates:Aggregates
-    attach_interfaces = nova.api.openstack.compute.plugins.v3.attach_interfaces:AttachInterfaces
-    availability_zone = nova.api.openstack.compute.plugins.v3.availability_zone:AvailabilityZone
-    block_device_mapping = nova.api.openstack.compute.plugins.v3.block_device_mapping:BlockDeviceMapping
-    cells = nova.api.openstack.compute.plugins.v3.cells:Cells
-    certificates = nova.api.openstack.compute.plugins.v3.certificates:Certificates
-    config_drive = nova.api.openstack.compute.plugins.v3.config_drive:ConfigDrive
-    console_output = nova.api.openstack.compute.plugins.v3.console_output:ConsoleOutput
-    consoles = nova.api.openstack.compute.plugins.v3.consoles:Consoles
-    deferred_delete = nova.api.openstack.compute.plugins.v3.deferred_delete:DeferredDelete
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-    evacuate = nova.api.openstack.compute.plugins.v3.evacuate:Evacuate
-    extended_availability_zone = nova.api.openstack.compute.plugins.v3.extended_availability_zone:ExtendedAvailabilityZone
-    extended_server_attributes = nova.api.openstack.compute.plugins.v3.extended_server_attributes:ExtendedServerAttributes
-    extended_status = nova.api.openstack.compute.plugins.v3.extended_status:ExtendedStatus
-    extended_volumes = nova.api.openstack.compute.plugins.v3.extended_volumes:ExtendedVolumes
-    extension_info = nova.api.openstack.compute.plugins.v3.extension_info:ExtensionInfo
-    flavors = nova.api.openstack.compute.plugins.v3.flavors:Flavors
-    flavors_extraspecs = nova.api.openstack.compute.plugins.v3.flavors_extraspecs:FlavorsExtraSpecs
-    flavor_access = nova.api.openstack.compute.plugins.v3.flavor_access:FlavorAccess
-    flavor_rxtx = nova.api.openstack.compute.plugins.v3.flavor_rxtx:FlavorRxtx
-    flavor_manage = nova.api.openstack.compute.plugins.v3.flavor_manage:FlavorManage
-    hide_server_addresses = nova.api.openstack.compute.plugins.v3.hide_server_addresses:HideServerAddresses
-    hosts = nova.api.openstack.compute.plugins.v3.hosts:Hosts
-    hypervisors = nova.api.openstack.compute.plugins.v3.hypervisors:Hypervisors
-    instance_actions = nova.api.openstack.compute.plugins.v3.instance_actions:InstanceActions
-    ips = nova.api.openstack.compute.plugins.v3.ips:IPs
-    instance_usage_audit_log = nova.api.openstack.compute.plugins.v3.instance_usage_audit_log:InstanceUsageAuditLog
-    keypairs = nova.api.openstack.compute.plugins.v3.keypairs:Keypairs
-    limits = nova.api.openstack.compute.plugins.v3.limits:Limits
-    migrations = nova.api.openstack.compute.plugins.v3.migrations:Migrations
-    multinic = nova.api.openstack.compute.plugins.v3.multinic:Multinic
-    multiple_create = nova.api.openstack.compute.plugins.v3.multiple_create:MultipleCreate
-    quota_classes = nova.api.openstack.compute.plugins.v3.quota_classes:QuotaClasses
-    quota_sets = nova.api.openstack.compute.plugins.v3.quota_sets:QuotaSets
-    remote_consoles = nova.api.openstack.compute.plugins.v3.remote_consoles:RemoteConsoles
-    rescue = nova.api.openstack.compute.plugins.v3.rescue:Rescue
-    scheduler_hints = nova.api.openstack.compute.plugins.v3.scheduler_hints:SchedulerHints
-    security_groups = nova.api.openstack.compute.plugins.v3.security_groups:SecurityGroups
-    server_diagnostics = nova.api.openstack.compute.plugins.v3.server_diagnostics:ServerDiagnostics
-    server_metadata = nova.api.openstack.compute.plugins.v3.server_metadata:ServerMetadata
-    server_password = nova.api.openstack.compute.plugins.v3.server_password:ServerPassword
-    server_usage = nova.api.openstack.compute.plugins.v3.server_usage:ServerUsage
-    servers = nova.api.openstack.compute.plugins.v3.servers:Servers
-    services = nova.api.openstack.compute.plugins.v3.services:Services
-    shelve = nova.api.openstack.compute.plugins.v3.shelve:Shelve
-    simple_tenant_usage = nova.api.openstack.compute.plugins.v3.simple_tenant_usage:SimpleTenantUsage
-    versions = nova.api.openstack.compute.plugins.v3.versions:Versions
-
-nova.api.v3.extensions.server.create =
-    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
-    availability_zone = nova.api.openstack.compute.plugins.v3.availability_zone:AvailabilityZone
-    block_device_mapping = nova.api.openstack.compute.plugins.v3.block_device_mapping:BlockDeviceMapping
-    config_drive = nova.api.openstack.compute.plugins.v3.config_drive:ConfigDrive
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-    keypairs_create = nova.api.openstack.compute.plugins.v3.keypairs:Keypairs
-    multiple_create = nova.api.openstack.compute.plugins.v3.multiple_create:MultipleCreate
-    scheduler_hints = nova.api.openstack.compute.plugins.v3.scheduler_hints:SchedulerHints
-    security_groups = nova.api.openstack.compute.plugins.v3.security_groups:SecurityGroups
-    user_data = nova.api.openstack.compute.plugins.v3.user_data:UserData
-
-nova.api.v3.extensions.server.create.deserialize =
-    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
-    availability_zone = nova.api.openstack.compute.plugins.v3.availability_zone:AvailabilityZone
-    block_device_mapping = nova.api.openstack.compute.plugins.v3.block_device_mapping:BlockDeviceMapping
-    config_drive = nova.api.openstack.compute.plugins.v3.config_drive:ConfigDrive
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-    multiple_create = nova.api.openstack.compute.plugins.v3.multiple_create:MultipleCreate
-    scheduler_hints = nova.api.openstack.compute.plugins.v3.scheduler_hints:SchedulerHints
-    security_groups = nova.api.openstack.compute.plugins.v3.security_groups:SecurityGroups
-    user_data = nova.api.openstack.compute.plugins.v3.user_data:UserData
-
-nova.api.v3.extensions.server.rebuild =
-    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-
-nova.api.v3.extensions.server.rebuild.deserialize =
-    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-
-nova.api.v3.extensions.server.resize =
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-
-nova.api.v3.extensions.server.resize.deserialize =
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
-
-nova.api.v3.extensions.server.update =
-    access_ips = nova.api.openstack.compute.plugins.v3.access_ips:AccessIPs
-    disk_config = nova.api.openstack.compute.plugins.v3.disk_config:DiskConfig
 
 [build_sphinx]
 all_files = 1
@@ -161,15 +39,15 @@ tag_date = 0
 tag_svn_revision = 0
 
 [compile_catalog]
-directory = nova/locale
-domain = nova
+directory = gantt/locale
+domain = gantt
 
 [update_catalog]
-domain = nova
-output_dir = nova/locale
-input_file = nova/locale/nova.pot
+domain = gantt
+output_dir = gantt/locale
+input_file = gantt/locale/gantt.pot
 
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
-output_file = nova/locale/nova.pot
+output_file = gantt/locale/gantt.pot
