Minimal changes to get gantt passing the gate
This is the smallest set of changes needed to unwedge the gate. Because
the gate is wedged all these changes need to be in a single patch in
order to fix it.

* point .gitreview at correct repo

pep8
* Don't run tools/config/check_uptodate.sh, we don't even have a config
  file to check yet.
* gantt, doesn't have any local hacking checks yet so remove that
  section from tox.ini
* Update import_exceptions in tox.ini

pylint
* copy lintstack code in from nova.

docs
* add gantt version code, copied in from nova

Change-Id: I1d7adb5bf1bf383a2f8543dda6eb4cdeb26f3b9a

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = nova
+name = gantt
 version = 2014.1
 summary = Cloud computing fabric controller
 description-file =
@@ -24,7 +24,7 @@ setup-hooks =
 
 [files]
 packages =
-    nova
+    gantt
 
 [entry_points]
 nova.image.download.modules =
