--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ downloadcache = ~/cache/pip
 sitepackages = False
 commands =
   flake8 {posargs}
-  {toxinidir}/tools/config/check_uptodate.sh
+#TODO add tools/config/check_uptodate.sh
 
 [testenv:pylint]
 setenv = VIRTUAL_ENV={envdir}
@@ -51,7 +51,3 @@ commands = {posargs}
 # E125 is deliberately excluded. See https://github.com/jcrocholl/pep8/issues/126
 ignore = E121,E122,E123,E124,E125,E126,E127,E128,E711,E712,H102,H404,F403,F811,F841,H803
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,tools
-
-[hacking]
-local-check-factory = nova.hacking.checks.factory
-import_exceptions = nova.openstack.common.gettextutils._
