--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ commands = {posargs}
 # H102 Apache 2.0 license header not found
 
 # E125 is deliberately excluded. See https://github.com/jcrocholl/pep8/issues/126
-ignore = E121,E122,E123,E124,E125,E126,E127,E128,E711,E712,H102,H302,H404,F403,F811,F841,H803
+ignore = E121,E122,E123,E124,E125,E126,E127,E128,E711,E712,H102,H404,F403,F811,F841,H302,H803
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,tools
 
 [hacking]
