--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pbr>=0.5.21,<1.0
-SQLAlchemy>=0.7.8,<=0.7.99
+pbr>=0.6,!=0.7,<1.0
+SQLAlchemy>=0.7.8,!=0.9.5,<=0.9.99
 amqplib>=0.6.1
 anyjson>=0.3.3
 argparse
@@ -9,24 +9,24 @@ Jinja2
 kombu>=2.4.8
 lxml>=2.3
 Routes>=1.12.3
-WebOb>=1.2.3,<1.3
+WebOb>=1.2.3
 greenlet>=0.3.2
 PasteDeploy>=1.5.0
 Paste
-sqlalchemy-migrate>=0.8.2
+sqlalchemy-migrate>=0.9.1
 netaddr>=0.7.6
 suds>=0.4
-paramiko>=1.8.0
+paramiko>=1.13.0
 pyasn1
 Babel>=1.3
-iso8601>=0.1.8
-jsonschema>=1.3.0,!=1.4.0
+iso8601>=0.1.9
+jsonschema>=2.0.0,<2.0
 python-cinderclient>=1.0.6
-python-neutronclient>=2.3.0,<3
+python-neutronclient>=2.3.5,<3
 python-glanceclient>=0.9.0
-python-keystoneclient>=0.4.1
-six>=1.4.1
-stevedore>=0.12
+python-keystoneclient>=0.9.0
+six>=1.7.0
+stevedore>=0.14
 websockify>=0.5.1,<0.6
-oslo.config>=1.2.0
-pycadf>=0.1.9
+oslo.config>=1.2.1
+pycadf>=0.5.1
