--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
-home-page = http://www.openstack.org/
+home-page = https://git.openstack.org/cgit/openstack/gantt
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
